refactor: rename and merge exclusion in
